--- a/PasswordHash/PasswordHash.csproj
+++ b/PasswordHash/PasswordHash.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blake2\Blake2B-FullyUnrolled.cs" />
+    <Compile Include="Blake2\Blake2B-Inline.cs" />
+    <Compile Include="Blake2\Blake2B-Simple.cs" />
+    <Compile Include="Blake2\Blake2B.cs" />
+    <Compile Include="Blake2\Blake2S-FullyUnrolled.cs" />
+    <Compile Include="Blake2\Blake2S.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
